# Woofer

./: .gitignore  README.md  Woofer.csproj  Woofer.csproj.DotSettings  Woofer.sln  com.tenderowl.woofer.gresource  meson.build  woofer.tenderowl.com.gresource
Woofer/: Application.cs  Constants.cs  Program.cs  meson.build
Woofer/Extensions/: ListExtension.cs
Woofer/Models/: MusicLibrary.cs  PlayerState.cs  Playlist.cs  Track.cs  TrackRowData.cs
Woofer/Services/: CoverExtractor.cs  PlayerController.cs  PlaylistManager.cs  Scanner.cs  TagReader.cs
Woofer/Ui/: MainWindow.cs  TracksGridView.cs  TracksListView.cs
build-aux/: nuget-sources.json  woofer.tenderowl.com.json
data/: com.tenderowl.woofer.appdata.xml.in  com.tenderowl.woofer.desktop.in  com.tenderowl.woofer.gresource.xml  com.tenderowl.woofer.gschema.xml  styles.css  woofer.tenderowl.com.appdata.xml.in  woofer.tenderowl.com.desktop.in  woofer.tenderowl.com.gresource.xml  woofer.tenderowl.com.gschema.xml
data/icons/: meson.build
data/ui/: MainWindow.blp  Sidebar.blp  TracksGridView.blp  TracksListView.blp
po/: meson.build
