# scalable_dir = join_paths('hicolor', 'scalable', 'apps')
# install_data(
#   join_paths(scalable_dir, ('@0@.svg').format(app_id)),
#   install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
# )

# symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
# install_data(
#   join_paths(symbolic_dir, ('@0@-symbolic.svg').format(app_id)),
#   install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
# )

dir_48 = join_paths('hicolor', '48x48', 'apps')
install_data(
  join_paths(dir_48, ('@0@.png').format(app_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', dir_48)
)

dir_256 = join_paths('hicolor', '256x256', 'apps')
install_data(
  join_paths(dir_256, ('@0@.png').format(app_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', dir_256)
)
